# fastleave

./: .gitignore  CLAUDE.md  Cargo.toml  FastLeave.csproj  MainForm.cs  Program.cs  README.md  app.manifest  build.rs
.claude/: settings.local.json
src/: main.rs
